Ensure we never linebreak the slot component

--- a/hsreplaynet/static/styles/components.scss
+++ b/hsreplaynet/static/styles/components.scss
@@ -1517,6 +1517,7 @@ ul.list-ltr, ol.list-ltr {
 
 		> li {
 			list-style-type: none;
+			white-space: nowrap;
 			height: 100%;
 		}
 	}
